--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.pick": "^4.4.6",
+    "@types/react-dom": "^18.0.0",
     "@types/react-lifecycles-compat": "^3.0.1",
     "@types/react-modal": "^3.13.1",
     "@types/react-onclickoutside": "^6.7.4",
