--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.pick": "^4.4.6",
     "@types/mapbox__geo-viewport": "^0.4.1",
+    "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-lifecycles-compat": "^3.0.1",
     "@types/react-map-gl": "^6.1.2",
     "@types/react-modal": "^3.13.1",
