--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -1,11 +1,8 @@
 name: Node.js Package
 
-on:
-  release:
-    types: [created]
-  push:
-    branches:
-      - tilelayer-2.5.5
+on: push
+  # release:
+  #   types: [created]
 
 jobs:
   publish-npm:
@@ -20,4 +17,4 @@ jobs:
       - run: yarn
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
