--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -1,8 +1,11 @@
 name: Node.js Package
 
-on: push
-  # release:
-  #   types: [created]
+on:
+  release:
+    types: [created]
+  push: 
+    branches:
+      - tilelayer-2.5.5
 
 jobs:
   publish-npm:
