--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -18,6 +18,6 @@ jobs:
           registry-url: https://npm.pkg.github.com
       - run: npm install -g yarn
       - run: yarn
-      - run: npm publish
+      - run: npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
